Remove unneccessary R code